--- a/styles/jsdoc-default.css
+++ b/styles/jsdoc-default.css
@@ -17,6 +17,7 @@ body {
 h1 {
   font-family: 'Bowlby One SC', cursive;
   font-size: 200%;
+  line-height: 130%;
   font-weight: bold;
   letter-spacing: -0.01em;
   margin: 0;
@@ -359,6 +360,11 @@ footer {
 
 .example a {
   font-size: 125%;
+}
+
+/* Blog styles */
+.post-date {
+  text-transform: capitalize;
 }
 
 /* PRISM overrides */
