--- a/styles/jsdoc-default.css
+++ b/styles/jsdoc-default.css
@@ -371,6 +371,12 @@ footer {
   margin: 15px 0;
 }
 
+.post-navigation:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 .post-navigation a {
   color: #FFF;
   text-decoration: none;
